# First_ROS2

./: .gitignore  README.md  gitpush.sh
face_detect_ws/: frames_2025-08-09_15.07.13.gv  webcam_test.py
face_detect_ws/src/face_detect/: package.xml  setup.py
face_detect_ws/src/face_detect/face_detect/: camera_publisher.py  face_detect_node.py  face_detector_node.py  hc_face_detect_node.py
face_detect_ws/src/face_detect/launch/: face_detect.launch.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/tortoise_bot/lib/tortoise_bot/: fake_joint_publisher  simple_joint_publisher  tortoise_controller  turtle_bot_teleop  velocity_controller
install/tortoise_bot/share/tortoise_bot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
new_ws/src/tortoise_bot/launch/: tortoise_launch.py
new_ws/src/tortoise_bot/rviz/: tortoise_config.rviz
new_ws/src/tortoise_bot/tortoise_bot/: lidar_processor.py
new_ws/src/tortoise_bot/urdf/: simple_bot.urdf
test_ws/src/lidar_test/: package.xml  setup.cfg  setup.py
test_ws/src/lidar_test/launch/: gazebo_lidar.launch.py  launch_lidar_robot.py  lidar_test.launch.py
test_ws/src/lidar_test/lidar_test/: lidar_listener.py
test_ws/src/lidar_test/urdf/: robot_with_lidar.urdf
test_ws/src/lidar_test/worlds/: lidar_test.world  simple_lidar.world
tortoise_ws/: simple_bridge.py  web.html
tortoise_ws/src/tortoise_bot/: package.xml  setup.cfg  setup.py
tortoise_ws/src/tortoise_bot/worlds/: empty.sdf
tortoise_ws/src/turtlebot_control/: package.xml  setup.py
(+10 files in other folders)
