<?xml version="1.0"?>
<package format="3">
  <name>lidar_test</name>
  <version>0.0.0</version>
  <description>Python LiDAR test package for beginners</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
